# diesel-async-example

./: .env  Cargo.toml  docker-compose.yml
.github/workflows/: check.yml  test.yml
migrations/2022-10-03-095258_init/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
tests/: insert_and_validate.rs
