[package]
name = "diesel-async-example"
version = "0.1.0"
edition = "2021"

[features]
default = ["async"]
async = ["diesel-async"]
sync = ["diesel/r2d2"]

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.0", features = ["mysql", "chrono"] }
diesel-async = { version = "0.1.0", features = ["bb8", "mysql", "tokio"], optional = true }
dotenv = "0.15.0"
futures = "0.3.24"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[patch.crates-io]
diesel-async = { git = "https://github.com/gwy15/diesel_async.git", branch = "bugfix/mysql-close-stmt" }
diesel = { git = "https://github.com/gwy15/diesel.git", branch = "feat/datetime-utc" }
